@@ -1,6 +1,5 @@
 package net.geant.nmaas.portal.api.market;
 
-import com.google.common.collect.ImmutableMap;
 import jakarta.validation.Valid;
 import lombok.AllArgsConstructor;
 import lombok.Getter;
@@ -56,6 +55,7 @@ import java.time.LocalDateTime;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
+import java.util.Map;
 import java.util.Optional;
 import java.util.Set;
 import java.util.stream.Collectors;
@@ -433,12 +433,12 @@ public class ApplicationController extends AppBaseController {
                 ? app.getName().substring(0, app.getName().indexOf("_DELETED_"))
                 : app.getName();
 
-        ImmutableMap<String, Object> attributes = ImmutableMap.of(
+        Map<String, Object> attributes = Map.of(
                 "app_name", appBaseName,
                 "app_version", app.getVersion(),
                 "reason", stateChangeRequest.getReason() == null ? "" : stateChangeRequest.getReason(),
                 "message", stateChangeRequest.getNotificationText() == null ? "" : stateChangeRequest.getNotificationText());
-        if (!stateChangeRequest.getState().equals(ApplicationState.NEW)) {
+        if (!stateChangeRequest.getState().equals(ApplicationState.ACTIVE)) {
             ApplicationBase applicationBase = appBaseService.findByName(appBaseName);
             UserView owner = modelMapper.map(userService.findByUsername(applicationBase.getOwner()).orElseThrow(() -> new IllegalArgumentException("Owner not found")), UserView.class);
             MailAttributes mailAttributes = MailAttributes.builder()
